--- a/sweepSteak/sweepSteak/sweepSteak.csproj
+++ b/sweepSteak/sweepSteak/sweepSteak.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sweepstakes.cs" />
     <Compile Include="sweepsteaksManagementSystem.cs" />
+    <Compile Include="view.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
